- alignement of images in buttons corrected - moved logout button to header bar

--- a/css/DBAdmin_style.css
+++ b/css/DBAdmin_style.css
@@ -1,3 +1,7 @@
+img{
+    vertical-align: middle;
+}
+
 /* ------------------------------------------------ */
 /*              Overwrites kijs Styles               */
 /* ------------------------------------------------ */
